fixed browserSync and added overflow-x: hidden; to css to remove horizontal scroll bar

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -6,6 +6,7 @@ body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   background-color: #15395D;
   margin: 0px;
+  overflow-x: hidden;
 }
 
 #stars {
